force-app/main/default/objects/Account/fields/Annual_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contract_Value__c</fullName>
    <description>Total annual contract value for this account's Catalyst subscription. Used for pipeline and forecast reporting. Req: MKT-REQ-SALES-008.</description>
    <label>Annual Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>