force-app/main/default/objects/Account/fields/Billing_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_ID__c</fullName>
    <description>External ID used as the key for billing system callout (Named Credential: BillingSystem_NC). Set during account creation from billing system integration. Req: MKT-REQ-NFR-008.</description>
    <externalId>true</externalId>
    <label>Billing Account ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>