force-app/main/default/objects/Account/fields/Contract_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Date__c</fullName>
    <description>Date the account's Catalyst subscription is due for renewal. Used by AccountHealthScoreService renewal proximity component (25% weight). Req: MKT-REQ-SALES-008.</description>
    <label>Contract Renewal Date</label>
    <type>Date</type>
</CustomField>