force-app/main/default/objects/Account/fields/CSAT_Average__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Average__c</fullName>
    <description>Average CSAT score (1–5) across all completed Feedback_Survey__c records for this account. Calculated by AccountHealthScoreService — native Roll-Up Summary not used because Feedback_Survey__c relates to Account via Contact (not direct Master-Detail). Input to Health_Score__c. Req: MKT-REQ-SALES-010.</description>
    <label>CSAT Average</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>