force-app/main/default/objects/Account/fields/Duplicate_Domain_Flag__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Domain_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true by AccountTriggerHandler when the account's email domain matches an existing account and is not in Domain_Exclusion__mdt. Surfaces a warning on the account record page. Req: MKT-REQ-SALES-011.</description>
    <label>Duplicate Domain Flag</label>
    <type>Checkbox</type>
</CustomField>