force-app/main/default/objects/Account/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <description>Composite account health score 0–100. Calculated by AccountHealthScoreService: CSAT avg (25%) + open case inverse (25%) + platform usage index (25%) + renewal proximity (25%). Updated on Case close and by scheduled batch. Req: MKT-REQ-SALES-010.</description>
    <label>Health Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>