force-app/main/default/objects/Account/fields/Modules_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Modules_Purchased__c</fullName>
    <description>Catalyst Platform modules licensed by this account. Used for case routing (Affected Module matching) and portal dashboard display. Req: MKT-REQ-SALES-008.</description>
    <label>Modules Purchased</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaign Intelligence</fullName>
            </value>
            <value>
                <fullName>Audience Studio</fullName>
            </value>
            <value>
                <fullName>Attribution Engine</fullName>
            </value>
            <value>
                <fullName>Content Hub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>