force-app/main/default/objects/Account/fields/Open_Case_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Case_Count__c</fullName>
    <description>Count of open cases (Status != Closed/Resolved) for this account. Maintained by CaseTriggerHandler on insert/update/delete. Input to Health_Score__c inverse component. Req: MKT-REQ-SALES-010.</description>
    <label>Open Case Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <type>Number</type>
</CustomField>