force-app/main/default/objects/Account/fields/Platform_Usage_Index__c.field-meta.xml
<CustomField>
    <fullName>Platform_Usage_Index__c</fullName>
    <description>Normalised platform usage score 0–100. Populated by UsageAPIService stub callout (Named Credential: UsageAPI_NC). Input to Health_Score__c usage component. Req: MKT-REQ-SALES-010.</description>
    <label>Platform Usage Index</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>