force-app/main/default/objects/Account/fields/Primary_Platform_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Platform_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary technical or business contact at the account for Catalyst platform matters. Displayed on account health dashboard. Req: MKT-REQ-SALES-008.</description>
    <label>Primary Platform Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Primary Platform Contact)</relationshipLabel>
    <relationshipName>Primary_Platform_Contact_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>