force-app/main/default/objects/Account/fields/Subscription_Tier__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Tier__c</fullName>
    <description>Catalyst subscription tier. Drives SLA entitlement process assignment, Omni-Channel routing priority, and case SLA_Tier_at_Creation__c snapshot. Req: MKT-REQ-SALES-008.</description>
    <label>Subscription Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Starter</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>